fix: add missing translation strings for goto start/end actions

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -10,6 +10,8 @@ togglefullscreen = "Toggle fullscreen"
 closewindow = "Close window"
 nextimage = "Next image"
 previousimage = "Previous image"
+gotofirstimage = "Go to first image"
+gotolastimage = "Go to last image"
 openfiles = "Open files"
 zoomin = "Zoom in"
 zoomout = "Zoom out"
